--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@le2xx/ngx-audio-player": "^18.0.0",
     "hamburgers": "^1.2.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.16.0",
